--- a/style/select/select-s.css
+++ b/style/select/select-s.css
@@ -15,13 +15,12 @@
   composes: control from '../button/button-normal-s.css';
   composes: control from './select.css';
 
-  height: line-s;
   padding-right: 25px;
 
   text-align: left;
 }
 
-.control:after
+.control:before
 {
   right: 10px;
 
@@ -36,10 +35,10 @@
 {
   composes: input from './select.css';
 
+  height: line-s;
   padding: 0 25px 0 13px;
 
   font-size: size-s;
-  line-height: line-s;
 }
 
 .menu
