--- a/style/select/select.css
+++ b/style/select/select.css
@@ -15,6 +15,11 @@
 
 .control:after
 {
+  content: '\00a0';
+}
+
+.control:before
+{
   position: absolute;
   top: 50%;
 
@@ -28,6 +33,8 @@
   top: 0;
   left: 0;
 
+  display: inline-block;
+
   box-sizing: border-box;
   width: 100%;
 
@@ -37,6 +44,7 @@
   box-shadow: none;
 
   font-family: arial,sans-serif;
+  line-height: normal;
 
   -webkit-appearance: none;
   -webkit-tap-highlight-color: transparent;
@@ -75,19 +83,19 @@
   box-shadow: none;
 }
 
-.native:disabled ~ .control:after
+.native:disabled ~ .control:before
 {
   opacity: .4;
 }
 
 /* mixins */
 
-.isClosedControl:after
+.isClosedControl:before
 {
   transform: rotate(0deg);
 }
 
-.isOpenedControl:after
+.isOpenedControl:before
 {
   transform: rotate(-180deg);
 }
